added styling for entire app

--- a/portfolio/src/styles/Footer.css
+++ b/portfolio/src/styles/Footer.css
@@ -1,35 +1,15 @@
-:root {
-  --accent1: rgb(239, 214, 206);
-  --accent2: rgb(162, 103, 105);
-  --accent3: rgb(115, 44, 44);
-  --dark: rgb(50, 2, 22);
-  --grey: rgb(35, 32, 32);
-}
-
-h1 {
-  font-size: 300%;
-}
-
-h2 {
-  font-size: 250%;
-}
-
-h3 {
-  font-size: 185%;
-}
-
-h4 {
-  font-size: 150%;
-  margin: 5px;
-}
-
 footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 8rem;
   text-align: center;
-  background-color: var(--grey);
-  color: var(--accent1);
-  padding: 2%;
-  border-radius: 20px;
-  margin-top: 10px;
+  color: var(--accent3);
+  padding: 5px;
+  /* border-radius: 20px; */
 }
 
 footer ul {
@@ -38,7 +18,6 @@ footer ul {
   justify-content: center;
   list-style-type: none;
   padding: 0;
-  padding-bottom: 30px;
 }
 
 footer ul li {
@@ -50,7 +29,7 @@ footer ul li {
 }
 
 a {
-  color: var(--accent1);
+  color: var(--accent3);
   text-decoration: none;
 }
 
