--- a/portfolio/src/styles/Header.css
+++ b/portfolio/src/styles/Header.css
@@ -1,42 +1,13 @@
-:root {
-  --accent1: rgb(239, 214, 206);
-  --accent2: rgb(162, 103, 105);
-  --accent3: rgb(115, 44, 44);
-  --dark: rgb(50, 2, 22);
-  --grey: rgb(35, 32, 32);
-}
-
-h1 {
-  font-size: 300%;
-}
-
-h2 {
-  font-size: 250%;
-}
-
-h3 {
-  font-size: 185%;
-}
-
-h4 {
-  font-size: 150%;
-  margin: 5px;
-}
-
 header {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--grey);
-  color: var(--accent2);
+  /* background-color: var(--accent1); */
+  color: var(--grey);
   width: 100%;
-  margin-bottom: 10px;
-  border-radius: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 header h1 {
-  color: var(--accent1);
+  color: var(--accent3);
 }
 
 .headline-columns {
@@ -44,4 +15,6 @@ header h1 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: flex-end;
+  padding: 2px;
 }
