--- a/portfolio/src/styles/Navbar.css
+++ b/portfolio/src/styles/Navbar.css
@@ -1,80 +1,46 @@
-:root {
-  --accent1: rgb(239, 214, 206);
-  --accent2: rgb(162, 103, 105);
-  --accent3: rgb(115, 44, 44);
-  --dark: rgb(50, 2, 22);
-  --grey: rgb(35, 32, 32);
-}
-
-h1 {
-  font-size: 300%;
-}
-
-h2 {
-  font-size: 250%;
-}
-
-h3 {
-  font-size: 185%;
-}
-
-h4 {
-  font-size: 150%;
-  margin: 5px;
+nav {
+  width: 40%;
 }
 
 nav ul {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: space-around;
   list-style-type: none;
+  align-items: center;
   padding: 0;
+  margin: 0;
   background-image: linear-gradient(
     to right,
     rgba(239, 214, 206, 1) 0%,
-    rgba(162, 103, 105) 35%,
-    rgba(115, 44, 44, 1) 70%,
+    rgba(239, 214, 206, 1) 25%,
+    rgba(162, 103, 105) 25%,
+    rgba(162, 103, 105) 50%,
+    rgba(115, 44, 44, 1) 50%,
+    rgba(115, 44, 44, 1) 75%,
+    rgba(50, 2, 22, 1) 75%,
     rgba(50, 2, 22, 1) 100%
   );
-  border-radius: 5px;
+  color: black;
 }
 
 nav li {
-  padding: 10px;
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-#nav-about a {
-  color: var(--accent3);
+  padding: 15px;
   text-decoration: none;
+  text-align: center;
   transition: 0.5s;
-}
-
-#nav-work a {
-  color: var(--dark);
-  text-decoration: none;
-  transition: 0.5s;
-}
-
-#nav-contact a {
-  color: var(--accent1);
-  text-decoration: none;
-  transition: 0.5s;
+  margin: 0;
 }
 
 /* Nav hover functions */
 
-#nav-about a:hover,
-#nav-work a:hover,
-#nav-contact a:hover {
+nav li:hover {
   font-size: 120%;
+  cursor: pointer;
 }
 
-#nav-about a:focus,
-#nav-work a:focus,
-#nav-contact a:focus {
+nav li:focus {
   font-size: 120%;
+  cursor: pointer;
 }
