added styling for Resume page

--- a/portfolio/src/styles/App.css
+++ b/portfolio/src/styles/App.css
@@ -85,3 +85,11 @@ form ul {
 form ul li {
   padding: 10px;
 }
+
+#resumeLink {
+  color: white;
+}
+
+#resumeLink:hover {
+  color: var(--accent2);
+}
