--- a/portfolio/src/styles/Header.css
+++ b/portfolio/src/styles/Header.css
@@ -18,3 +18,12 @@ header h1 {
   align-items: flex-end;
   padding: 2px;
 }
+
+/* ----- Responsive ----- */
+
+@media screen and (max-width: 900px) {
+  .headline-columns {
+    flex-direction: column;
+    align-items: center;
+  }
+}
