--- a/portfolio/src/styles/Project.css
+++ b/portfolio/src/styles/Project.css
@@ -32,3 +32,17 @@
 .card img:hover {
   opacity: 1;
 }
+
+/* ----- Responsive ----- */
+
+@media screen and (max-width: 1250px) {
+  .card {
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .card {
+    width: 80%;
+  }
+}
